[gd_scene load_steps=2 format=3 uid="uid://ba1d0flyaqdys"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_wp8a0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp8a0")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 123.0
offset_right = 481.0
offset_bottom = 252.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 121.0
offset_right = 884.0
offset_bottom = 238.0
text = "Join"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 352.0
offset_right = 737.0
offset_bottom = 463.0
text = "Start Game"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
